...
    data object SettingsGeneral : Screen("General")

    @Serializable
    data object SettingsSecurity : Screen("Security")

    @Serializable
    data object SettingsTimers : Screen("Timers")

    @Serializable
    data class SettingsTimerEdit(
        val timerId: Long? = null
    ) : Screen("Timer")

...
