...
    init {
        loop()
    }

    @OptIn(DelicateIterableApi::class)
    override fun addScheduler(
        tag: String,
        cron: String,
        timeZone: TimeZone,
        action: SchedulerAction
    ) {
        val cronBuilder = Cron.parseAndBuild(cron) {
            it.firstDayOfWeek = WeekDays.Monday
...
