...
                                FilledTonalIconButton(
                                    modifier = Modifier.size(32.dp),
                                    onClick = { viewModel.openTimerEditor(null) }
                                ) {
                                    Icon(
                                        imageVector = Icons.Filled.Add,
                                        contentDescription = "New Timer",
                                        modifier = Modifier.size(20.dp)
                                    )
                                }
                            }
                            AppPane(
                                title = key.title,
...
